force-app/main/default/objects/Signature_Provider_Settings__mdt/Signature_Provider_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Signature Provider Settings</label>
    <pluralLabel>Signature Provider Settings</pluralLabel>
</CustomObject>