force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Base_URL__c</fullName>
    <description>Base URL for API calls</description>
    <label>API Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>