force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>API Key for authentication</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>