force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/API_Secret__c.field-meta.xml
<CustomField>
    <fullName>API_Secret__c</fullName>
    <description>API Secret for authentication - consider using Named Credential instead</description>
    <label>API Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>