force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>sandbox or production</description>
    <label>Environment</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>