force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/OAuth_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Client_ID__c</fullName>
    <description>OAuth Client ID</description>
    <label>OAuth Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>