force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/OAuth_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Client_Secret__c</fullName>
    <description>OAuth Client Secret - consider using Named Credential instead</description>
    <label>OAuth Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>