force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/OAuth_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Token_Endpoint__c</fullName>
    <description>OAuth token endpoint URL</description>
    <label>OAuth Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>