force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/Send_API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Send_API_Base_URL__c</fullName>
    <description>Base URL for Send API (case file creation)</description>
    <label>Send API Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>