force-app/main/default/objects/Signature_Provider_Settings__mdt/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <description>Secret for verifying webhook HMAC signatures</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>